[FIX] fix text and media on small devices

--- a/dev/styles/main/general.less
+++ b/dev/styles/main/general.less
@@ -76,6 +76,31 @@
 
 
 
+// ==================================================================
+// ======== Helper classes for Fluid Styled Content extension  ====
+// ==================================================================
+.ce-gallery img {
+    display: block;
+    height: auto;
+    max-width: 100%;
+}
+
+@media (max-width: 767px) {
+    .ce-right.ce-nowrap .ce-gallery {
+        float: none;
+        margin: 40px 0 0 0 ;
+    }
+    .ce-left.ce-nowrap .ce-gallery {
+        float: none;
+        margin: 40px 0 0 0 ;
+    }
+
+}
+// -----------------------------------------------------------------------------
+// -----------------------------------------------------------------------------
+
+
+
 // =================================
 // ======== Browsehappy, fix IE ====
 // =================================
